profilelist1exp/unpackaged/objects/Partner_Quoting_Relationships__c.object
<CustomObject>
    <fields>
        <fullName>Action_Performed_By__c</fullName>
        <description>capture the record modifiers email address</description>
        <label>Action Performed By</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Activate_Delete__c</fullName>
        <formula>IF((now()-LastModifiedDate)*24&gt;24, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activate Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMC_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>EMC ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EMC_Integration_Status__c</fullName>
        <label>EMC Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting Sync</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Has Error</fullName>
                </value>
                <value>
                    <fullName>Do Not Sync</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMC_Last_Sync_date__c</fullName>
        <label>EMC Last Sync date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EMC_Operation__c</fullName>
        <label>EMC Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Creation</fullName>
                    <default>true</default>
                    <label>Creation</label>
                </value>
                <value>
                    <fullName>Deletion</fullName>
                </value>
                <value>
                    <fullName>Updation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exception_message__c</fullName>
        <label>Exception message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Track_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Partner_Track__r.Id , Partner_Track__r.Partner_Track_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Track Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Track</label>
        <referenceTo>Partner_Track__c</referenceTo>
        <relationshipLabel>Partner Quoting Relationships</relationshipLabel>
        <relationshipName>PartnerQuoting_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Quoting Relationships</relationshipLabel>
        <relationshipName>Partner_Quoting_Relationships</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill To</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Quoting Enabled VAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Partner Quoting Relationship</label>
    <nameField>
        <displayFormat>PQR-{000000}</displayFormat>
        <label>Partner Quoting Relationships</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Quoting Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validation_on_Partner_Track_For_PQR</fullName>
        <active>true</active>
        <description>Can&apos;t change Partner Track field once created</description>
        <errorConditionFormula>AND( !(ISNEW()),ISCHANGED(Partner_Track__c))</errorConditionFormula>
        <errorMessage>Cannot change the Partner Track</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cannot_update_Rel_Account_or_Rel_Type</fullName>
        <active>true</active>
        <description>Validate that user cannot update the Related Account or Relationship type</description>
        <errorConditionFormula>AND( !(ISNEW()),OR(ISCHANGED(Related_Account__c),ISCHANGED(Relationship_Type__c)))</errorConditionFormula>
        <errorMessage>You cannot update a relationship. Please delete this record and recreate it with appropriate information</errorMessage>
    </validationRules>
</CustomObject>